@startuml klasy
' Diagram klas - PlayLink (encje SQLModel + menedżery WebSocket)
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #f5ecd6
  BorderColor #8a6d3b
  ArrowColor #5a4a2a
}
hide empty members

enum RsvpStatus {
  present
  absent
  maybe
}

package "Warstwa danych (models.py)" {
  class User {
    +id: int
    +identity_address: str «UK»
    +username: str «UK»
    +created_at: datetime
    +last_login: datetime
  }
  class Room {
    +id: int
    +name: str «UK»
    +game: str
    +lobby_location: str
    +players_max: int
    +created_by: str
    +expires_at: datetime
  }
  class RoomMember {
    +room_id: int «PK,FK»
    +user_id: int «PK,FK»
    +joined_at: datetime
  }
  class Message {
    +id: int
    +room_id: int «FK»
    +sender_address: str
    +content: str
    +signature: str «EIP-191»
    +sent_at: str
  }
  class RoomEvent {
    +id: int
    +room_id: int «FK,UQ»
    +starts_at: datetime
    +ends_at: datetime
  }
  class RoomEventRsvp {
    +id: int
    +event_id: int «FK»
    +user_id: int «FK»
    +status: RsvpStatus
  }
  class Game {
    +id: int
    +name: str «UK»
    +sort_order: int
  }
  class Nonce {
    +id: int
    +value: str «UK, SHA-256»
    +expires_at: datetime
    +used: bool
  }
}

package "Warstwa logiki (backend/ws, routers)" {
  class ConnectionManager {
    -active_connections: list<WebSocket>
    +connect(ws)
    +disconnect(ws)
    +broadcast(data)
  }
  class RoomChatManager {
    -rooms: dict<str, dict<WebSocket, str>>
    +connect(room, ws, address)
    +disconnect(room, ws)
    +broadcast(room, payload)
    +disconnect_user(room, address, code=4409)
  }
}

User "1" -- "0..*" Nonce
User "1" -- "0..*" RoomMember
Room "1" -- "0..*" RoomMember
Room "1" -- "0..*" Message
Room "1" -- "0..1" RoomEvent
RoomEvent "1" -- "0..*" RoomEventRsvp
User "1" -- "0..*" RoomEventRsvp
RoomEventRsvp ..> RsvpStatus

ConnectionManager ..> Room : rozgłasza listę
RoomChatManager ..> Message : rozgłasza ramki
@enduml
